--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>hmpg Login</title>
-    <script src="js/index.js"></script>
+    <title>Tom's Media Server</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link href="./index_files/bootstrap.min.css" rel="stylesheet">
-    <link href="./index_files/signin.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/media.js"></script>
 </head>
 
 <body class="page">
