--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
             </div>
         </div>
     </nav>
-    
-    <div>
-        text here
+   <div>
+            <div>
+                Se7en
+                <img src = 'http://ia.media-imdb.com/images/M/MV5BMTQwNTU3MTE4NF5BMl5BanBnXkFtZTcwOTgxNDM2Mg@@._V1_UX182_CR0,0,182,268_AL_.jpg'/>
+            </div>    
+            <div>
+                Mr. Brooks
+                <img src = 'http://ia.media-imdb.com/images/M/MV5BMTQwNTU3MTE4NF5BMl5BanBnXkFtZTcwOTgxNDM2Mg@@._V1_UX182_CR0,0,182,268_AL_.jpg'/>                
+            </div>   
+            <div>
+                Number 3
+            </div>   
+
+
     </div>
-    <!-- /.modal -->
-    <!--<script src="js/login.js"></script>-->
 </body>
 
 </html>
