--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
    <div>
             <div>
                 Se7en
-                <img src = 'http://ia.media-imdb.com/images/M/MV5BMTQwNTU3MTE4NF5BMl5BanBnXkFtZTcwOTgxNDM2Mg@@._V1_UX182_CR0,0,182,268_AL_.jpg'/>
+                <img src = 'http://www.impawards.com/1995/posters/seven_ver1.jpg'/>
             </div>    
             <div>
                 Mr. Brooks
-                <img src = 'http://ia.media-imdb.com/images/M/MV5BMTQwNTU3MTE4NF5BMl5BanBnXkFtZTcwOTgxNDM2Mg@@._V1_UX182_CR0,0,182,268_AL_.jpg'/>                
+                <img src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/>                
             </div>   
             <div>
                 Number 3
