--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tom's Media Server</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="js/bootstrap.min.js"></script>
     <script src="js/media.js"></script>
 </head>
@@ -22,21 +23,60 @@
             </div>
         </div>
     </nav>
-   <div>
-            <div>
-                Se7en
-                <img src = 'http://www.impawards.com/1995/posters/seven_ver1.jpg'/>
-            </div>    
-            <div>
-                Mr. Brooks
-                <img src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/>                
-            </div>   
-            <div>
-                Number 3
-            </div>   
 
 
-    </div>
+
+    <ul class="media">
+    <li>
+        <a href="#">
+            <img class= 'poster' src = 'http://www.impawards.com/1995/posters/seven_ver1.jpg'/>
+            <h4>Se7en</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><li>
+        <a href="#">
+            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
+            <h4>Mr. Brooks</h4>
+            <p>Watch now</p>
+        </a>
+    </li><!-- more list items -->
+</ul>
 </body>
 
 </html>
