--- a/index.html
+++ b/index.html
@@ -28,51 +28,9 @@
 
     <ul class="media">
     <li>
-        <a href="#">
-            <img class= 'poster' src = 'http://www.impawards.com/1995/posters/seven_ver1.jpg'/>
-            <h4>Se7en</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
-            <p>Watch now</p>
-        </a>
-    </li><li>
-        <a href="#">
-            <img class= 'poster' src = 'https://www.movieposter.com/posters/archive/main/95/MPW-47743.jpg'/> 
-            <h4>Mr. Brooks</h4>
+        <a href="#" style="display:none;" id="movieClone">
+            <img class= 'poster' src = ''/>
+            <h4></h4>
             <p>Watch now</p>
         </a>
     </li><!-- more list items -->
