--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li>
         <a href="#" style="display:none;" id="movieClone">
             <img class= 'poster' src = ''/>
-            <h4></h4>
+            <h4 class="name"></h4>
             <p>Watch now</p>
         </a>
     </li><!-- more list items -->
