--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 
     <ul class="media">
-    <li>
-        <a href="#" style="display:none;" id="movieClone">
+    <li id="movieClone">
+        <a href="#" style="display:none;" >
             <img class= 'poster' src = ''/>
             <h4 class="name"></h4>
             <p>Watch now</p>
