--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body class="page">
     <nav class="navbar navbar-default navnav" id="navID">
         <div class="container-fluid">
+            <button id="spooky">spooky!</button>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
             Tom's Media Server
