--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 
 
 
-    <ul class="media">
+    <ul class="media"><!-- more list items -->
+</ul>
+</body>
+
+
     <li id="movieClone">
         <a href="#" style="display:none;" >
             <img class= 'poster' src = ''/>
             <h4 class="name"></h4>
             <p>Watch now</p>
         </a>
-    </li><!-- more list items -->
-</ul>
-</body>
+    </li>
 
 </html>
