--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <body class="page">
     <nav class="navbar navbar-default navnav" id="navID">
         <div class="container-fluid">
-            <button id="spooky">spooky!</button>
+            <select id="genreSelect">
+                <option value="Scary">Scary</option>
+                <option value="Kids">Kids</option>
+                <option value="Space Opera">Space Opera</option>
+                <option value="Drama">Drama</option>
+            </select>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
             Tom's Media Server
