--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav class="navbar navbar-default navnav" id="navID">
         <div class="container-fluid">
             <select id="genreSelect">
+                <option value="Genre">Genre</option>
                 <option value="Scary">Scary</option>
                 <option value="Kids">Kids</option>
                 <option value="Space Opera">Space Opera</option>
