--- a/index.html
+++ b/index.html
@@ -37,9 +37,31 @@
 </ul>
 </body>
 
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+        <video width="400" controls id="htmlVideo">
+          <source src="" type="video/mov">
+          Your browser does not support HTML5 video.
+        </video>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div>
+
 
     <li id="movieClone">
-        <a href="#" style="display:none;" >
+        <a href="#" style="display:none;" class="movieLink">
             <img class= 'poster' src = ''/>
             <h4 class="name"></h4>
             <p>Watch now</p>
