--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/navbar-fixed-side.css" rel="stylesheet" />
     <script src="js/bootstrap.min.js"></script>
     <script src="js/media.js"></script>
 </head>
 
-<body class="page">
-    <nav class="navbar navbar-default navnav" id="navID">
-        <div class="container-fluid">
+
+    <div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-lg-2">
+      <nav class="navbar navbar-default navbar-fixed-side">
+        <!-- normal collapsible navbar markup -->
             <select id="genreSelect">
                 <option value="Genre">Genre</option>
                 <option value="Scary">Scary</option>
@@ -23,13 +27,13 @@
                 <option value="Space Opera">Space Opera</option>
                 <option value="Drama">Drama</option>
             </select>
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-            Tom's Media Server
-          </a>
-            </div>
-        </div>
-    </nav>
+      </nav>
+    </div>
+    <div class="col-sm-9 col-lg-10">
+      <!-- your page content -->
+    </div>
+  </div>
+</div>
 
 
 
