--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 </div>
 
 
-
+<div>
     <ul class="media"><!-- more list items -->
 </ul>
+</div>
 </body>
 
 <div class="modal fade" id="videoModal" tabindex="-1" role="dialog">
