--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       Dropdown <span class="caret"></span>
     </a>
-    <ul id="genreSelect">
+    <ul id="genreSelect" class="dropdown-menu">
                 <li value="Genre">Genre</li>
                 <li value="Scary">Scary</li>
                 <li value="Kids">Kids</li>
