--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
 <ul class="nav nav-tabs">
-  ...
+  Tom's Media Server
   <li role="presentation" class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-      Dropdown <span class="caret"></span>
+      Genre <span class="caret"></span>
     </a>
     <ul id="genreSelect" class="dropdown-menu">
                 <li value="Genre">Genre</li>
@@ -28,8 +28,14 @@
                 <li value="Space Opera">Space Opera</li>
                 <li value="Drama">Drama</li>
     </ul>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        Media Type <span class="caret"></span>
+      </a>
+      <ul id="typeSelect" class="dropdown-menu">
+                <li value="Movie">Movie</li>
+                <li value="TV">TV</li>
+    </ul>
   </li>
-  ...
 </ul>
 
 
