--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <li value="Space Opera">Space Opera</li>
                 <li value="Drama">Drama</li>
     </ul>
+    </li>
+    <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
         Media Type <span class="caret"></span>
       </a>
