--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       Genre <span class="caret"></span>
     </a>
     <ul id="genreSelect" class="dropdown-menu">
-                <li value="Genre">Genre</li>
-                <li value="Scary">Scary</li>
-                <li value="Kids">Kids</li>
-                <li value="Space Opera">Space Opera</li>
-                <li value="Drama">Drama</li>
+                <li value="Genre"><a>Genre</a></li>
+                <li value="Scary"><a>Scary</a></li>
+                <li value="Kids"><a>Kids</a></li>
+                <li value="Space Opera"><a>Space Opera</a></li>
+                <li value="Drama"><a>Drama</a></li>
     </ul>
     </li>
     <li role="presentation" class="dropdown">
