--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 
 </body>
 
-<div class="modal fade bs-example-modal-lg" id="videoModal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
-        <video width="400" controls id="htmlVideo">
+        <video width="80%" controls id="htmlVideo">
           <source src="" type="video/mov">
           Your browser does not support HTML5 video.
         </video>
