--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
-        <video width="80%" controls id="htmlVideo">
+        <video width="80%" style="margin-left:10%" controls id="htmlVideo">
           <source src="" type="video/mov">
           Your browser does not support HTML5 video.
         </video>
