--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       Genre <span class="caret"></span>
     </a>
     <ul id="genreSelect" class="dropdown-menu">
-                <li value="Genre"><a>Genre</a></li>
+                <li value="Genre" class="proto"><a>Genre</a></li>
     </ul>
     </li>
     <li role="presentation" class="dropdown">
