--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                 <li value="Genre" class="proto"><a>Genre</a></li>
     </ul>
     </li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        Year <span class="caret"></span>
-      </a>
+    <li role="presentation">
       <p>
         <label for="amount">Movie Release Year:</label>
         <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
