--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/media.js"></script>
 </head>
 
-
+<!--
 <ul class="nav nav-tabs">
   Tom's Media Server
   <li role="presentation" class="dropdown">
@@ -35,7 +35,27 @@
       <div id="slider-range"></div>
   </li>
 </ul>
+-->
 
+<ul >
+  Tom's Media Server
+  <li role="presentation" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        Genre <span class="caret"></span>
+      </a>
+      <ul id="genreSelect" class="dropdown-menu">
+                  <li value="Genre" class="proto"><a>Genre</a></li>
+      </ul>
+    </li>
+    <li >
+      <p>
+        <label for="amount">Movie Release Year:</label>
+        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+      </p>
+       
+      <div id="slider-range"></div>
+  </li>
+</ul>
 
 
     <ul class="media"><!-- more list items -->
