--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <li value="Genre" class="proto"><a>Genre</a></li>
       </ul>
     </li>
-    <li >
+    <li role="presentation">
       <p>
         <label for="amount">Movie Release Year:</label>
         <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
@@ -37,6 +37,7 @@
 </ul>
 -->
 
+<div>
 <ul >
   Tom's Media Server
   <li role="presentation" class="dropdown">
@@ -47,7 +48,7 @@
                   <li value="Genre" class="proto"><a>Genre</a></li>
       </ul>
     </li>
-    <li >
+    <li role="presentation">
       <p>
         <label for="amount">Movie Release Year:</label>
         <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
@@ -56,10 +57,12 @@
       <div id="slider-range"></div>
   </li>
 </ul>
+</div>
 
-
+<div>
     <ul class="media"><!-- more list items -->
 </ul>
+</div>
 
 </body>
 
