--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link href="css/navbar-fixed-side.css" rel="stylesheet" />
     <script src="js/bootstrap.min.js"></script>
     <script src="js/media.js"></script>
@@ -37,7 +38,7 @@
 </ul>
 -->
 
-<div>
+<div id="filterDiv">
 <ul >
   Tom's Media Server
   <li role="presentation" class="dropdown">
