--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
 </ul>
 -->
 
-<div id="filterDiv">
-<ul >
-  Tom's Media Server
-  <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        Genre <span class="caret"></span>
-      </a>
-      <ul id="genreSelect" class="dropdown-menu">
-                  <li value="Genre" class="proto"><a>Genre</a></li>
-      </ul>
-    </li>
-    <li role="presentation">
-      <p>
-        <label for="amount">Movie Release Year:</label>
-        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-      </p>
-       
-      <div id="slider-range"></div>
-  </li>
-</ul>
+<div id="filterDiv" style="float:left;">
+
+    Tom's Media Server
+    <div role="presentation" class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+          Genre <span class="caret"></span>
+        </a>
+        <ul id="genreSelect" class="dropdown-menu">
+                    <li value="Genre" class="proto"><a>Genre</a></li>
+        </ul>
+      </div>
+      <div role="presentation">
+        <p>
+          <label for="amount">Movie Release Year:</label>
+          <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+        </p>
+         
+        <div id="slider-range"></div>
+    </div>
+
 </div>
 
 <div>
