--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 </div>
 
 
-    <li id="movieClone">
-        <a href="#" style="display:none;" class="movieLink">
+    <li id="movieClone" style="display:none;">
+        <a href="#"  class="movieLink">
             <img class= 'poster' src = ''/>
             <h4 class="name"></h4>
             <p>Watch now</p>
