--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
-        <div width="80%" style="margin-left:10%">
-          <video  controls id="htmlVideo">
+        <div >
+          <video  controls id="htmlVideo" width="80%" style="margin-left:10%">
             <source src="" type="video/mov">
             Your browser does not support HTML5 video.
           </video>
