--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </video>
         </div>
         <div id="movieInfo">
-          <li class="plot">plot</li>
+          <li class="plot" style="width: 80%;">plot</li>
           <li class="runtime">runtime</li>
           <li class="rating">rating</li>
           <li class="rated">rated</li>
