--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
     <div role="presentation">
         <p>
-          <label for="amount">Movie Rating:</label>
-          <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+          <label for="ratingSlider">Movie Rating:</label>
+          <input type="text" id="ratingSlider" readonly style="border:0; color:#f6931f; font-weight:bold;">
         </p>
          
-        <div id="slider-range"></div>
+        <div id="rating-slider-range"></div>
     </div>
 </div>
 
