--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="img/icon.png" rel="icon">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link href="css/navbar-fixed-side.css" rel="stylesheet" />
@@ -18,7 +19,7 @@
 
 <div id="filterDiv" style="float:left;">
 
-    Tom's Media Server
+    <h4>Tom's Media Server</h4>
     <div role="presentation" class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
           Genre <span class="caret"></span>
